--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "author": "Adekunle Oseni",
   "license": "ISC",
   "devDependencies": {
-    "parcel-bundler": "^1.12.5",
+    "parcel": "^2.0.0-beta.2",
     "posthtml-inline-svg": "^0.2.0"
   }
 }
