--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "dev": "parcel index.html -p 3000",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "clean": "rm -rf .cache .parcel-cache dist"
   },
   "keywords": [
     "Adekunle",
@@ -24,6 +25,7 @@
   "author": "Adekunle Oseni",
   "license": "ISC",
   "devDependencies": {
+    "breakpoint-sass": "^2.7.1",
     "parcel": "^2.0.0-beta.2",
     "posthtml-inline-svg": "^0.2.0"
   }
