Fix build issues

--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "Oadex.dev",
   "version": "1.0.0",
   "description": "Adekunle Oseni",
-  "main": "./assets/js/main.js",
   "scripts": {
     "dev": "parcel index.html -p 3000",
-    "build": "parcel build index.html",
+    "build": "parcel build ./index.html",
     "clean": "rm -rf .cache .parcel-cache dist"
   },
   "keywords": [
@@ -28,11 +27,11 @@
     "@parcel/packager-raw-url": "2.0.0-beta.2",
     "@parcel/transformer-sass": "2.0.0-beta.2",
     "@parcel/transformer-webmanifest": "2.0.0-beta.2",
-    "breakpoint-sass": "^2.7.1",
     "parcel": "^2.0.0-beta.2",
     "posthtml-inline-svg": "^0.2.0"
   },
   "dependencies": {
+    "breakpoint-sass": "^2.7.1",
     "figlet": "^1.5.0"
   }
 }
