--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,3 +19,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
           folder: dist # The folder the action should deploy.
+          branch: gh-pages # The branch the action should deploy to.
