--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Oadex.dev",
+  "name": "oadex.dev",
   "version": "1.0.0",
   "description": "Adekunle Oseni",
   "scripts": {
@@ -24,9 +24,10 @@
   "author": "Adekunle Oseni",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/packager-raw-url": "2.0.0-beta.2",
-    "@parcel/transformer-sass": "2.0.0-beta.2",
-    "@parcel/transformer-webmanifest": "2.0.0-beta.2",
+    "@parcel/packager-raw-url": "2.0.0-rc.0",
+    "@parcel/transformer-image": "^2.0.0-rc.0",
+    "@parcel/transformer-sass": "2.0.0-rc.0",
+    "@parcel/transformer-webmanifest": "^2.0.0-rc.0",
     "parcel": "^2.0.0-beta.2",
     "posthtml-inline-svg": "^0.2.0"
   },
