--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "license": "ISC",
   "devDependencies": {
     "astro": "^1.0.1",
-    "breakpoint-sass": "^2.7.1"
+    "breakpoint-sass": "^2.7.1",
+    "sass": "^1.54.4"
   },
   "dependencies": {
     "figlet": "^1.5.0"
