--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,6 +9,9 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.4
+        with:
+          node-version: 16.x
+          cache: npm
 
       - name: Install and Build 🔧 
         run: |
